--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -21,7 +21,11 @@
     <header>
       <h1>¡Bienvenido!</h1>
     </header>
-    <form id="registro" action="/registrar" method="post">
+    <form id="registro">
+      <div class="input-group">
+        <label for="name">Nombre de usuario</label>
+        <input type="text" id="name" name="name" required>
+      </div>
       <div class="input-group">
         <label for="email">Correo electrónico</label>
         <input type="email" id="email" name="email" required>
@@ -40,6 +44,6 @@
     <p class="recuperar">¿Olvidó su contraseña? <a href="#">RECUPERAR</a></p>
   </section>
 </main>
-<script src="/static/js/script.js"></script>
+<script src="/static/js/registro.js"></script>
 </body>
 </html>
