--- a/templates/index/dinformaticaindex.html
+++ b/templates/index/dinformaticaindex.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/dprogramacion.css') }}"/>
-    <link rel="stylesheet" href="/CET4/static/css/dinformatica.css">
+    <link rel="stylesheet" href="/static/css/dprogramacion.css"/>
     <title>dprogramacion</title>
 </head>
 <body>
@@ -34,27 +33,27 @@
     </div>
 <main class="cuerpo1">
     <section class="bloque-superpuesto">
-        <a href="/CET4/templates/index/indexdcuarto.html">
-            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 4to">
-            <a href="/CET4/templates/index/indexdcuarto.html" class="texto-superpuesto">4to</a>
+        <a href="/templates/index/indexdcuarto.html">
+            <img src="/static/utils/img/materia1.png" alt="Materias 4to">
+            <a href="/templates/index/indexdcuarto.html" class="texto-superpuesto">4to</a>
         </a>
     </section>
     <section class="bloque-superpuesto">
-        <a href="/CET4/templates/index/indexdquinto.html">
-            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 5to">
-            <a href="/CET4/templates/index/indexin5to.html" class="texto-superpuesto">5to</a>
+        <a href="/templates/index/indexdquinto.html">
+            <img src="/static/utils/img/materia1.png" alt="Materias 5to">
+            <a href="/templates/index/indexin5to.html" class="texto-superpuesto">5to</a>
         </a>
     </section>
     <section class="bloque-superpuesto">
-        <a href="/CET4/templates/index/indexsexto.html">
-            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 6to">
-            <a href="/CET4/templates/index/indexin6to.html" class="texto-superpuesto">6to</a>
+        <a href="/templates/index/indexsexto.html">
+            <img src="/static/utils/img/materia1.png" alt="Materias 6to">
+            <a href="/templates/index/indexin6to.html" class="texto-superpuesto">6to</a>
         </a>
     </section>
     <section class="bloque-superpuesto">
-        <a href="/CET4/templates/index/indexdseptimo.html">
-            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 7mo">
-            <a href="/CET4/templates/index/indexin7mo.html" class="texto-superpuesto">7mo</div>
+        <a href="/templates/index/indexdseptimo.html">
+            <img src="/static/utils/img/materia1.png" alt="Materias 7mo">
+            <a href="/templates/index/indexin7mo.html" class="texto-superpuesto">7mo</div>
         </a>
     </section>
 </main>
