--- a/templates/index/indexcentralayuda.html
+++ b/templates/index/indexcentralayuda.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Centro de Ayuda - CET4</title>
-  <link rel="stylesheet" href="/CET4/static/css/Centralayuda.css" />
+  <link rel="stylesheet" href="static/css/Centralayuda.css" />
 </head>
 <body>
   <header class="header">
-  <a href="/CET4/templates/index/indexprincipal.html"  class="margen" >CET4</a>
+  <a href="/templates/index/indexprincipal.html"  class="margen" >CET4</a>
     <nav class="nav">
       <span>Español</span>
-      <a href="/CET4/templates/index/indexiniciarsesion.html">Iniciar Sesión</a>
+      <a href="/templates/index/indexiniciarsesion.html">Iniciar Sesión</a>
     </nav>
   </header>
 
@@ -22,7 +22,7 @@
     </section>
 
     <section class="intro">
-      <a href="/CET4/templates/index/indexcentralayuda.html">¿Necesitás ayuda? ¡No dudes en contar con nosotros!</a>
+      <a href="/templates/index/indexcentralayuda.html">¿Necesitás ayuda? ¡No dudes en contar con nosotros!</a>
       <p>
         Bienvenido al Centro de Ayuda. En esta sección reunimos toda la información que podés necesitar para sacarte dudas y resolver problemas rápido y fácil.
       </p>
@@ -30,49 +30,49 @@
 
     <section class="grid">
       <article class="card">
-        <img src="/CET4/utils/img/anuncio.png" alt="Ícono de Anuncios">
+        <img src="/static/utils/img/anuncio.png" alt="Ícono de Anuncios">
         <h2>Anuncios</h2>
         <p>Esté al tanto de nuevas noticias</p>
       </article>
 
       <article class="card">
-        <img src="/CET4/utils/img/terminos_condiciones.png" alt="Ícono de Reglas">
+        <img src="/static/utils/img/terminos_condiciones.png" alt="Ícono de Reglas">
         <h2>Reglas</h2>
         <p>Algunas condiciones que debe respetar</p>
       </article>
 
       <article class="card">
-        <img src="/CET4/utils/img/foco.png" alt="Ícono de Opiniones">
+        <img src="/static/utils/img/foco.png" alt="Ícono de Opiniones">
         <h2>Opiniones</h2>
         <p>Valoramos cada comentario</p>
       </article>
 
       <article class="card">
-        <img src="/CET4/utils/img/errores.png" alt="Ícono de Errores">
+        <img src="/static/utils/img/errores.png" alt="Ícono de Errores">
         <h2>Errores</h2>
         <p>Problemas que vemos, problemas que resolvemos</p>
       </article>
 
       <article class="card">
-        <img src="/CET4/utils/img/seguridad_privacidad.png" alt="Ícono de Seguridad">
+        <img src="/static/utils/img/seguridad_privacidad.png" alt="Ícono de Seguridad">
         <h2>Seguridad y Privacidad</h2>
         <p>Nosotros te cubrimos la espalda</p>
       </article>
 
       <article class="card">
-        <img src="/CET4/utils/img/nosotros_lol.png" alt="Ícono de Nosotros">
+        <img src="/static/utils/img/nosotros_lol.png" alt="Ícono de Nosotros">
         <h2>Nosotros</h2>
         <p>Los invitamos a conocernos un poco mejor</p>
       </article>
 
       <article class="card">
-        <img src="/CET4/utils/img/contactenos.png" alt="Ícono de Contacto">
+        <img src="/static/utils/img/contactenos.png" alt="Ícono de Contacto">
         <h2>Contactanos</h2>
         <p>Cualquier consulta más personal</p>
       </article>
 
       <article class="card">
-        <img src="/CET4/utils/img/tutorial_lol.png" alt="Ícono de Guías">
+        <img src="/static/utils/img/tutorial_lol.png" alt="Ícono de Guías">
         <h2>Guías y Tutoriales</h2>
         <p>Aprendé a fondo, nadie nace sabiendo</p>
       </article>
