--- a/templates/index/indexempr.html
+++ b/templates/index/indexempr.html
@@ -11,12 +11,12 @@
     <div id="out">
       <button aria-label="Cerrar   sesión">&#9587;</button>
     </div>
-    <a href="#"><img src="/CET4/utils/img/usuario.png" alt="Perfil" class="usuario" /></a>
-    <a href="#"><img src="/CET4/utils/img/casa-img1.png" alt="Inicio" class="casa1" /></a>
-    <a href="#"><img src="/CET4/utils/img/campana-img2.png" alt="Notificaciones" class="campana2" /></a>
-    <a href="#"><img src="/CET4/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3" /></a>
-    <a href="#"><img src="/CET4/utils/img/grupo-img4.png" alt="Grupos" class="grupo4" /></a>
-    <a href="#"><img src="/CET4/utils/img/opciones-img5.png" alt="Configuración" class="opcion5" /></a>
+    <a href="#"><img src="/utils/img/usuario.png" alt="Perfil" class="usuario" /></a>
+    <a href="#"><img src="/utils/img/casa-img1.png" alt="Inicio" class="casa1" /></a>
+    <a href="#"><img src="/utils/img/campana-img2.png" alt="Notificaciones" class="campana2" /></a>
+    <a href="#"><img src="/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3" /></a>
+    <a href="#"><img src="/utils/img/grupo-img4.png" alt="Grupos" class="grupo4" /></a>
+    <a href="#"><img src="/utils/img/opciones-img5.png" alt="Configuración" class="opcion5" /></a>
   </nav>
 
   <div class="separador-lateral"></div>
