--- a/templates/index/indexin5to.html
+++ b/templates/index/indexin5to.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/d5to.css">
+    <link rel="stylesheet" href="/static/css/d5to.css">
     <title>programacion  y programacion cuarto</title>
 </head>
 <body>
@@ -15,18 +15,18 @@
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
-        <a href="/CET4/templates/index/indexusuario.html"><img src="/CET4/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
-        <a href="/CET4/templates/index/indexhomeoinicio.html"><img src="/CET4/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
-        <a href="/CET4/templates/index/indexnotificaciones.html"><img src="/CET4/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
-        <a href="/CET4/templates/index/indexcentralayuda.html"><img src="/CET4/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
-        <a href="#"><img src="/CET4/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
-        <a href="#"><img src="/CET4/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+        <a href="/templates/index/indexusuario.html"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
+        <a href="/templates/index/indexhomeoinicio.html"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
+        <a href="/templates/index/indexnotificaciones.html"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
+        <a href="/templates/index/indexcentralayuda.html"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
+        <a href="#"><img src="/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
+        <a href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
         <form class="buscador-logo">
             <div class="buscador-logo2">
-            <img src="/CET4/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
+            <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
         </form>
@@ -34,25 +34,25 @@
     <div class="cuerpo1">
              <br>
      <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="4to">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
         <a href="/CET4/templates/index/indexlbssop.html" class="texto-superpuesto"> lab de sistemas opretativos </a>
       </div>
      <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a  href="/CET4/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware</a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a  href="/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware</a>
      </div>
      <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/CET4/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion </a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href="/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion </a>
      </div>
      <br>
      <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/CET4/templates/index/indexlbssdig.html" class="texto-superpuesto">sistemas digitales </a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/templates/index/indexlbssdig.html" class="texto-superpuesto">sistemas digitales </a>
      </div>
         <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/CET4/templates/index/indexlbtelein.html" class="texto-superpuesto">teleinform </a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/templates/index/indexlbtelein.html" class="texto-superpuesto">teleinform </a>
     </div>
 
     <div class="footer">  
