--- a/static/css/dprogramacion.css
+++ b/static/css/dprogramacion.css
@@ -142,12 +142,12 @@ body {
 
 /* Texto sobre imagen */
 .texto-superpuesto {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding: 12px 0;
-    background: rgba(0, 0, 0, 0.5);
-    text-align: center;
+   position: absolute;
+   top: 45%;
+   left: 45%;
+   transform: traslate(-45%, -45%);
+   font-size: 20px;
+   font-weight: bold;
     /*pointer-events: none;  El texto no bloquea clics */
 }
 
@@ -162,6 +162,7 @@ body {
     display: block;
     width: 100%;
     height: 100%;
+    
 }
 
 /* Responsive: uno al lado del otro hasta 768px */
