--- a/templates/index/dinformaticaindex.html
+++ b/templates/index/dinformaticaindex.html
@@ -35,25 +35,25 @@
     <section class="bloque-superpuesto">
         <a href="/templates/index/indexdcuarto.html">
             <img src="/static/utils/img/materia1.png" alt="Materias 4to">
-            <a href="/templates/index/indexdcuarto.html" class="texto-superpuesto">4to</a>
+            <a href="/informatica/4toinformatica" class="texto-superpuesto">4to</a>
         </a>
     </section>
     <section class="bloque-superpuesto">
         <a href="/templates/index/indexdquinto.html">
             <img src="/static/utils/img/materia1.png" alt="Materias 5to">
-            <a href="/templates/index/indexin5to.html" class="texto-superpuesto">5to</a>
+            <a href="/informatica/5toinformatica" class="texto-superpuesto">5to</a>
         </a>
     </section>
     <section class="bloque-superpuesto">
         <a href="/templates/index/indexsexto.html">
             <img src="/static/utils/img/materia1.png" alt="Materias 6to">
-            <a href="/templates/index/indexin6to.html" class="texto-superpuesto">6to</a>
+            <a href="/informatica/6toinformatica" class="texto-superpuesto">6to</a>
         </a>
     </section>
     <section class="bloque-superpuesto">
         <a href="/templates/index/indexdseptimo.html">
             <img src="/static/utils/img/materia1.png" alt="Materias 7mo">
-            <a href="/templates/index/indexin7mo.html" class="texto-superpuesto">7mo</div>
+            <a href="/informatica/7moinformatica" class="texto-superpuesto">7mo</div>
         </a>
     </section>
 </main>
