--- a/templates/index/indexin4to.html
+++ b/templates/index/indexin4to.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/d4to.css">
+    <link rel="stylesheet" href="/static/css/d4to.css">
     <title>programacion  y programacion cuarto</title>
 </head>
 <body>
