--- a/templates/index/indexin4to.html
+++ b/templates/index/indexin4to.html
@@ -35,25 +35,25 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/templates/index/indexlbapli.html" class="texto-superpuesto"> lab de aplicaciones </a>
+        <a href="/informatica/4toinformatica/labapps" class="texto-superpuesto"> lab de aplicaciones </a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a  href="/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion</a>
+        <a  href="/informatica/4toinformatica/labprog" class="texto-superpuesto">lab de programacion</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/indexlbssop.html" class="texto-superpuesto">lab de sistemas operativos </a>
+        <a href="/informatica/4toinformatica/labso" class="texto-superpuesto">lab de sistemas operativos </a>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware </a>
+        <a href="/informatica/4toinformatica/labhard" class="texto-superpuesto">lab de hardware </a>
     
     </div>
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexelectronica.html" class="texto-superpuesto">electronica </a>
+        <a href="/informatica/4toinformatica/electronica" class="texto-superpuesto">electronica </a>
     
     </div>
     </div>
