--- a/templates/index/dinformaticaindex.html
+++ b/templates/index/dinformaticaindex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/dprogramacion.css"/>
+    <link rel="stylesheet" href="/static/css/barralateral.css"/>
     <title>dprogramacion</title>
 </head>
 <body>
@@ -14,13 +15,14 @@
     <div class="elcostado ordenado">
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
-        </div>
-        <a href="#"><img src="/static/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
-        <a href="#"><img src="/static/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
-        <a href="#"><img src="/static/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
-        <a href="#"><img src="/static/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
-        <a href="#"><img src="/static/static/utils/img/grupo-img4.png" alt="Grupos" class="grupo4"></a>
-        <a href="#"><img src="/static/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+         </div>
+        <a href="/templates/index/indexusuario.html"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
+        <a href="/templates/index/indexhomeoinicio.html"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
+        <a href="/templates/index/indexnotificaciones.html"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
+        <a href="/templates/index/indexcentralayuda.html"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
+        <a href="#"><img src="/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
+        <a href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+    </div>
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
@@ -61,6 +63,6 @@
     <div class="footer">  
     </div>
     
-
+    <script src="/static/js/barralateral.js"></script>
 </body>
 </html>
