--- a/templates/index/indexin7mo.html
+++ b/templates/index/indexin7mo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d7mo.css">
+    <link rel="stylesheet" href="/static/css/barralateral.css"/>
     <title>programacion  y programacion cuarto</title>
 </head>
 <body>
@@ -58,6 +59,6 @@
     <div class="footer">  
     </div>
     
-
+<script src="/static/js/barralateral.js"></script>
 </body>
 </html>
